# Development

./: .gitignore
examplesDDS/DDS01/: CMakeLists.txt  publisher.cpp  publisher.hpp  scene_creator.cpp
examplesDesignPatterns/observer/: CMakeLists.txt
examplesDesignPatterns/observer/model/: Model.cpp
examplesQML/application/01/: CMakeLists.txt  StudentController.cpp  main.cpp
examplesQML/application/02/: CMakeLists.txt
examplesQML/application/03Caculator/: ButtonCreator.cpp  ButtonCreator.hpp  CMakeLists.txt  CalculatorModelTest.cpp  main.cpp  qml.qrc
examplesQML/application/04SavingApp/: CMakeLists.txt  Language.hpp  PrintOptionDisplay.cpp  PrintOptionDisplay.hpp  RequerimentOptionDisplay.cpp  RequerimentOptionDisplay.hpp  SceneCreator.cpp  SceneCreator.hpp
examplesQML/application/05SavingApp/: CMakeLists.txt  PrintScene.cpp  PrintScene.hpp  SceneController.cpp  SceneController.hpp  SceneCreator.cpp  SceneCreator.hpp  SceneModel.cpp  SceneModel.hpp  main.cpp
examplesQML/learning/qm08/: CMakeLists.txt  button.qml  buttonCreator.cpp  item.qml  itemCreator.cpp  itemCreator.hpp  main.cpp  main.qml  qml.qrc  rectangle.qml  rectangleCreator.cpp
examplesQML/learning/qml01/: CMakeLists.txt
examplesQML/learning/qml02/: CMakeLists.txt  HomeForm.ui.qml  jsLogic.js  jsLogic01.js  jsLogic04.js  main.cpp  main.qml  main01.qml  main02.qml  main03.qml  main04.qml  main05.qml  mycontroller.cpp  mycontroller.h  qml.qrc  setBackgroundMoney.qml  setExpenseMoney.qml  setMonth.qml
examplesQML/learning/qml03/: CMakeLists.txt  controller.cpp  controller.hpp  dataBase.json  main.cpp  main.qml
examplesQML/learning/qml04/: CMakeLists.txt  colorEnum.cpp  colorEnum.hpp  main.cpp  main.qml  mybutton.qml  myrect.qml  qml.qrc  scene.cpp  scene.hpp  yourobject.hpp
examplesQML/learning/qml05/: CMakeLists.txt  main.cpp  main.qml  qml.qrc  rectangle.qml  rectangleCreator.cpp  rectangleCreator.hpp  textContainer.qml  textContainerCreator.cpp  textContainerCreator.hpp
examplesQML/learning/qml06/: Book.cpp  Book.hpp  CMakeLists.txt  Library.cpp  Library.hpp  dataBase_updated.json  main.cpp  main.qml  second.qml
examplesQML/learning/qml07/: CMakeLists.txt  button.qml  buttonCreator.cpp  buttonCreator.hpp  buttonHandler.cpp  buttonHandler.hpp  loader.cpp  loader.hpp  main.cpp  main.qml  qml.qrc  rectangle.qml  rectangleCreator.hpp
examplesQML/learning/qml10/: CMakeLists.txt  button.qml  buttonCreator.cpp  buttonCreator.hpp  comboBox.qml  comboBoxCreator.cpp  comboBoxCreator.hpp  main.cpp  main.qml  qml.qrc  rectangle.qml  rectangleCreator.cpp  rectangleCreator.hpp  sceneCreator.cpp  sceneCreator.hpp
examplesQML/learning/qml11/: CMakeLists.txt  main.qml
examplesQML/learning/qml12/: CMakeLists.txt  qml.qrc
examplesQML/learning/qml13/: CMakeLists.txt  main.qml  qml.qrc
project01/: Design.qea
project01/Project01/: AddExpense.qml  AddSelector.qml  AddUserToExpense.qml  RegisterExpenseTracker.qml  RegisterUser.qml  main.cpp  main.qml  qml.qrc
project01/Project01/model/source/operation/: AllExpensesTrackers.cpp  AllExpensesTrackers.hpp  AllUsers.cpp  AllUsers.hpp  ExpenseTracker.cpp  ExpenseTracker.hpp  User.cpp  User.hpp  iAllExpensesTrackers.hpp  iAllUsers.hpp  iExpenseTracker.hpp  iUser.hpp
project01/Project01/model/source/operation/signal/: AddExpenseTracker.cpp  AddExpenseTracker.hpp  ShowUsersOfExpenseTracker.cpp  ShowUsersOfExpenseTracker.hpp  UserAdded.cpp  UserAdded.hpp
project01/Project01/source/source/controller/operation/: RegisterExpenseTracker.cpp  RegisterExpenseTracker.hpp  RegisterUser.cpp  RegisterUser.hpp  SelectExpenseTracker.cpp  SelectExpenseTracker.hpp
project01/Project01/source/source/controller/visualization/: ShowAvailableUsers.cpp  ShowAvailableUsers.hpp  VisualizeRegisterExpenseTracker.cpp  VisualizeRegisterExpenseTracker.hpp  VisualizeUserOfExpenseTracker.cpp  VisualizeUserOfExpenseTracker.hpp
project01/Project01/source/source/includeView/visualization/: ShowAvailableUsersInclude.cpp  ShowAvailableUsersInclude.hpp  VisualizeRegisterExpenseTracker.cpp  VisualizeRegisterExpenseTracker.hpp  VisualizeUserOfExpenseTracker.cpp  VisualizeUserOfExpenseTracker.hpp
projectDDS/DDS_Bank_HMI/view/: DepositMoneyView.hpp
projectDDS/DDS_Bank_HMI/view/dds/: FrontDDSView.cpp  FrontDDSView.hpp
projectQT/TicTacToe/: Board.cpp  CMakeLists.txt  DataHandler.cpp  Game.cpp  GameBoardInitializer.cpp  GameTypeInitializer.cpp  Language.cpp  ManageGame.cpp  Player.cpp  PlayerCharacter.cpp  PrintBoardGameTest.cpp  PrintBoardGameUser.cpp  PrintErrorMessageTest.cpp  PrintErrorMessageUser.cpp  PrintMatchResultTest.cpp  PrintMatchResultUser.cpp  QuantityOfPlayersController.cpp  RequerimentBoardSizeTest.cpp  RequerimentBoardSizeUser.cpp  RequerimentLanguageTest.cpp  RequerimentLanguageUser.cpp  RequerimentPieceCoordinatesIA.cpp  RequerimentPieceCoordinatesTest.cpp  RequerimentPieceCoordinatesUser.cpp  RequerimentQuantityOfPlayersTest.cpp  RequerimentQuantityOfPlayersUser.cpp  RequerimentTypeGameTest.cpp  RequerimentTypeGameUser.cpp  main.cpp
projectQT/TicTacToe/header/: Board.hpp  DataHandler.hpp  Game.hpp  GameBoardInitializer.hpp  GameTypeInitializer.hpp  Language.hpp  ManageGame.hpp  Player.hpp  PlayerCharacter.hpp  PrintBoardGameAbstract.hpp  PrintBoardGameTest.hpp  PrintBoardGameUser.hpp  PrintErrorMessageAbstract.hpp  PrintErrorMessageTest.hpp  PrintErrorMessageUser.hpp  PrintMatchResultAbstract.hpp  PrintMatchResultTest.hpp  PrintMatchResultUser.hpp  QuantityOfPlayersController.hpp  RequerimentBoardSizeAbstract.hpp  RequerimentBoardSizeTest.hpp  RequerimentBoardSizeUser.hpp  RequerimentLanguageAbstract.hpp  RequerimentLanguageTest.hpp  RequerimentLanguageUser.hpp  RequerimentPieceCoordinatesAbstract.hpp  RequerimentPieceCoordinatesIA.hpp  RequerimentPieceCoordinatesTest.hpp  RequerimentPieceCoordinatesUser.hpp  RequerimentQuantityOfPlayersAbstract.hpp  RequerimentQuantityOfPlayersTest.hpp  RequerimentQuantityOfPlayersUser.hpp  RequerimentTypeGameAbstract.hpp  RequerimentTypeGameTest.hpp  RequerimentTypeGameUser.hpp
(+12 files in other folders)
